--- a/MicroChallenge5/MicroChallenge5.csproj
+++ b/MicroChallenge5/MicroChallenge5.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserMessageEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
